@@ -1,3 +1,10 @@
+2020-05-08  Mark Wielaard  <mark@klomp.org>
+
+	* dwarf_decl_file.c (dwarf_decl_file): Use attr CU instead of DIE
+	CU to resolve file name.
+	* dwarf_ranges.c(dwarf_ranges): Document which CU we use when.
+	* libdw.h (dwarf_attr_integrate): Extend documentation.
+
 2020-04-25  Mark Wielaard  <mark@klomp.org>
 
 	* libdw_alloc.c (__libdw_alloc_tail): Call Dwarf oom_handler()
